[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-sniffer-and-decoder"
dynamic = ["version"]
description = "Wi-Fi capture and analysis with supported Ubuntu/Pi standalone and Windows remote workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "scapy[basic]>=2.5",
]
keywords = [
  "pcap",
  "networking",
  "wifi",
  "windows",
  "raspberry-pi",
  "analysis",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: Log Analysis",
  "Topic :: System :: Networking :: Monitoring",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
]

[project.scripts]
intelpipeline = "intel_api.cli:main"
videopipeline = "wifi_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/Potato4507/Wifi-Sniffer-And-Decoder"
Issues = "https://github.com/Potato4507/Wifi-Sniffer-And-Decoder/issues"
CI = "https://github.com/Potato4507/Wifi-Sniffer-And-Decoder/actions/workflows/ci.yml"
Changelog = "https://github.com/Potato4507/Wifi-Sniffer-And-Decoder/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "wifi_pipeline.__version__" }

[tool.setuptools.packages.find]
include = ["wifi_pipeline*", "intel_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
